Fixes the invisible social links issue in the team profile section

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -63,6 +63,11 @@
       li {
         display: inline-block;
         padding: 10px;
+        a {
+          i.fa {
+            color: white;
+          }
+        }
       }
     }
     padding: 20px;
